# skillbox-c-plus-plus_36.4

./: CMakeLists.txt  myprogram.cpp
